--- a/LibraryProject/hello.html
+++ b/LibraryProject/hello.html
@@ -16,9 +16,9 @@
         }
         h1 {
             font-size: 4rem; 
-            color: #2e8b57; 
+            color: #aa549f; 
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            border: 4px solid #2e8b57; 
+            border: 4px solid #aa549f; 
             padding: 20px;
             border-radius: 15px;
             background-color: #ffffff;
